# diagnostic-rs

./: .gitignore  Cargo.toml  Readme.md
.run/: Test All.run.xml  Test Quick.run.xml  TestAll.run.xml
projects/diagnostic/: Cargo.toml  Readme.md
projects/diagnostic-lsp/: Cargo.toml
projects/diagnostic-lsp/src/: lib.rs
projects/diagnostic-lsp/tests/: mod.rs
projects/diagnostic-proc/: Cargo.toml
projects/diagnostic-proc/src/: lib.rs
projects/diagnostic-proc/src/diag/: mod.rs
projects/diagnostic-proc/tests/: mod.rs
projects/diagnostic-quick/: Cargo.toml  Readme.md
projects/diagnostic-quick/src/: lib.rs
projects/diagnostic-quick/src/error_3rd/: for_email_address.rs  for_font_kit.rs  for_globset.rs  for_html_parser.rs  for_image.rs  for_lsp.rs  for_nom.rs  for_num.rs  for_peginator.rs  for_serde.rs  for_serde_binary.rs  for_sled.rs  for_tl.rs  for_walkdir.rs
projects/diagnostic-quick/src/error_3rd/for_ast/: mod.rs
projects/diagnostic-quick/src/errors/: error_io.rs  error_runtime.rs  error_syntax.rs  mod.rs
projects/diagnostic-simple/: Cargo.toml
projects/diagnostic-simple/src/: lib.rs
projects/diagnostic-simple/src/error_3rd/: for_chrono.rs  for_config.rs  for_git2.rs  for_mime.rs  for_num.rs  for_peginator.rs  for_pest.rs  for_ropey.rs  for_rust_decimal.rs  for_sass.rs  for_semver.rs  for_serde.rs  for_serde_binary.rs  for_serde_json.rs  for_sled.rs  for_std.rs  for_toml.rs  for_ucd_trie.rs  for_url.rs  for_walkdir.rs  mod.rs
projects/diagnostic-simple/src/error_3rd/for_ast/: mod.rs
projects/diagnostic-simple/src/errors/: display.rs  error_io.rs  error_runtime.rs  error_syntax.rs  mod.rs
projects/diagnostic-simple/tests/: main.rs
projects/diagnostic-svg/: Cargo.toml
projects/diagnostic-svg/src/: lib.rs
projects/diagnostic/examples/: custom_files.rs  peg_calculator.rs  readme_preview.rs  reusable_diagnostic.rs  term.rs
projects/diagnostic/src/: draw.rs  lib.rs  source.rs  write.rs
projects/diagnostic/src/characters/: mod.rs
projects/diagnostic/src/diagnostic/: mod.rs
projects/diagnostic/src/errors/: mod.rs
projects/diagnostic/src/errors/simple/: mod.rs
projects/diagnostic/src/errors/validation/: mod.rs
projects/diagnostic/src/location/: mod.rs
projects/diagnostic/src/source/: display.rs  mod.rs
projects/diagnostic/src/style/: color.rs  macros.rs  mod.rs  paint.rs  style.rs
projects/diagnostic/src/term/: config.rs  mod.rs  renderer.rs  views.rs
projects/diagnostic/src/text_cache/: mod.rs
projects/diagnostic/src/text_cache/builder/: mod.rs
projects/diagnostic/src/text_cache/file_id/: mod.rs  ser_der.rs  try_from.rs
projects/diagnostic/src/text_cache/labels/: mod.rs
projects/diagnostic/src/text_cache/level/: mod.rs
projects/diagnostic/src/text_cache/location/: mod.rs
projects/diagnostic/tests/: main.rs  multi_file.rs  multi_line.rs  simple.rs  source.rs  stress_test.rs  term.rs
projects/diagnostic/tests/simple/: mod.rs  multi_file.rs
projects/diagnostic/tests/support/: color_buffer.rs  mod.rs
projects/diagnostic/tests/term/: mod.rs
projects/diagnostic/tests/text_cache/: mod.rs
projects/source-cache/: Cargo.toml  readme.md
projects/source-cache/src/: display.rs  lib.rs  windows.rs  write.rs
projects/source-cache/src/cache/: mod.rs
projects/source-cache/src/characters/: mod.rs
projects/source-cache/src/identifier/: display.rs  mod.rs
projects/source-cache/src/location/: mod.rs
projects/source-cache/src/source/: display.rs  mod.rs
projects/source-cache/src/source_span/: display.rs  mod.rs
projects/source-cache/src/source_text/: mod.rs
projects/source-cache/src/span/: mod.rs
projects/source-cache/src/style/: mod.rs
projects/source-cache/src/text/: display.rs  mod.rs
projects/syntax-error/: Cargo.toml
projects/syntax-error/src/: lib.rs
projects/syntax-error/src/errors/: mod.rs
projects/syntax-error/src/term/: renderer.rs  views.rs
projects/syntax-error/src/text_cache/: mod.rs
projects/syntax-error/tests/term/: mod.rs
projects/syntax-error/tests/text_cache/: mod.rs
projects/validation/: Cargo.toml  build.rs
projects/validation/src/: lib.rs
projects/validation/src/validates/: convert.rs  mod.rs  try_from.rs
