[package]
name = "diagnostic-lsp"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Conversions between codespan types and Language Server Protocol types"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan-lsp"
edition = "2018"

[dependencies]
diagnostic = { version = "0.2.0", path = "../diagnostic" }
lsp-types = "0.93.2"
url = "2.3.1"
