[package]
name = "diagnostic-lsp"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Conversions between codespan types and Language Server Protocol types"
homepage = "https://github.com/oovm/diagnostic-rs"
repository = "https://github.com/oovm/diagnostic-rs"
documentation = "https://docs.rs/codespan-lsp"
edition = "2021"

[dependencies]
lsp-types = "0.93.2"
url = "2.3.1"

[dependencies.diagnostic]
version = "0.3.0"
path = "../diagnostic"
