[package]
name = "diagnostic-macro"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Conversions between codespan types and Language Server Protocol types"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan-lsp"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
diagnostic = { version = "0.2.0", path = "../diagnostic" }
syn = "1.0.103"
quote = "1.0.21"
proc-macro2 = { version = "1.0.47", features = ["span-locations"] }
