[package]
name = "diagnostic-macro"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Conversions between codespan types and Language Server Protocol types"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan-lsp"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.16"
quote = "1.0.27"
proc-macro2 = { version = "1.0.58", features = ["span-locations"] }

[dependencies.diagnostic]
#version = "0.3.0"
path = "../diagnostic"
