[package]
name = "diagnostic-quick"
version = "0.3.0"
authors = ["Aster <192607617@qq.com>"]
description = "Quick error type for diagnostic"
repository = "https://github.com/oovm/diagnostic-rs"
documentation = "https://docs.rs/diagnostic-quick"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies.diagnostic]
#version = "0.5.0"
path = "../diagnostic"

[dependencies]
lsp-types = { version = "0.95.0", optional = true }
ropey = { version = "1.6.1", optional = true }
rust_decimal = { version = "1.34.3", optional = true }
ucd-trie = { version = "0.1.6", optional = true }
sled = { version = "0.34.7", optional = true }

# serde
serde = { version = "1.0.197", features = ["derive"] }
toml = { version = "0.8.10", optional = true }
serde_json = { version = "1.0.114", optional = true }
serde-binary = { version = "0.5.0", optional = true }

# parser
url = { version = "2.5.0", optional = true, features = ["serde"] }
num = { version = "0.4.1", optional = true, features = ["serde"] }
email_address = { version = "0.2.4", optional = true, features = ["serde"] }
semver = { version = "1.0.22", optional = true, features = ["serde"] }
mime = { version = "0.3.17", optional = true, features = [] }
peginator = { version = "0.7.0", optional = true }
tl = { version = "0.7.8", optional = true }
chrono = { version = "0.4.35", optional = true }

# system
globset = { version = "0.4.14", optional = true }
walkdir = { version = "2.5.0", optional = true }
async-walkdir = { version = "1.0.0", optional = true }

# render
font-kit = { version = "0.12.0", optional = true }
pathfinder = { version = "0.6.5", optional = true }
image = { version = "0.24.9", optional = true }
imageproc = { version = "0.23.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { version = "0.52.0", optional = true }

[features]
default = []

[package.metadata.docs.rs]
all-features = true
