[package]
name = "diagnostic-quick"
version = "0.2.3"
authors = ["Aster <192607617@qq.com>"]
description = "Quick error type for diagnostic"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/diagnostic-quick"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies.diagnostic]
version = "0.4.3"
path = "../diagnostic"

[dependencies]
lsp-types = { version = "0.93.2", optional = true }
ropey = { version = "1.5.0", optional = true }
num = { version = "0.4.0", optional = true }
rust_decimal = { version = "1.27.0", optional = true }
ucd-trie = { version = "0.1.5", optional = true }
sled = { version = "0.34.7", optional = true }
serde = { version = "1.0.148", optional = true }
serde-binary = { version = "0.4.0", optional = true }
toml = { version = "0.5.9", optional = true }

# parser
url = { version = "2.3.1", optional = true }
peginator = { version = "0.6.0", optional = true }
tl = { version = "0.7.7", optional = true }

# system
globset = { version = "0.4.9", optional = true }
walkdir = { version = "2.3.2", optional = true }
async-walkdir = { version = "0.2.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { version = "0.10.1", optional = true }

[features]
default = ["serde"]

[package.metadata.docs.rs]
all-features = true
