[package]
name = "diagnostic-svg"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
description = "Conversions between codespan types and Language Server Protocol types"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan-lsp"
edition = "2018"

[dependencies]
diagnostic = { version = "0.1.0", path = "../diagnostic" }
lsp-types = "0.93.2"
url = "2.3.1"
