[package]
name = "diagnostic-svg"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Conversions between codespan types and Language Server Protocol types"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan-lsp"
edition = "2018"

[dependencies]
lsp-types = "0.94.1"
url = "2.4.1"

[dependencies.diagnostic]
#version = "0.3.0"
path = "../diagnostic"
