[package]
name = "diagnostic"
version = "0.6.2"
authors = ["Aster <192607617@qq.com>"]
description = "Pretty diagnostic report"
repository = "https://github.com/oovm/diagnostic-rs/tree/dev/projects/diagnostic"
documentation = "https://docs.rs/diagnostic"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
url = { version = "2.4.1", features = [], optional = true }
serde = { version = "1.0.180", features = ["derive"], optional = true }
unicode-width = "0.1.11"

[dev-dependencies]

[features]
default = []
serde = ["dep:serde", "url?/serde"]

[package.metadata.docs.rs]
all-features = true
