[package]
name = "diagnostic"
version = "0.6.2"
authors = ["Aster <192607617@qq.com>"]
description = "Pretty diagnostic report"
repository = "https://github.com/oovm/diagnostic-rs/tree/dev/projects/diagnostic"
documentation = "https://docs.rs/diagnostic"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
url = { version = "2.5.0", features = [], optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
unicode-width = "0.1.11"

[dependencies.source-cache]
version = "0.1.*"
path = "../source-cache"


[dev-dependencies]

[features]
default = []
serde = ["dep:serde", "url?/serde"]

[package.metadata.docs.rs]
all-features = true
