[package]
name = "diagnostic"
version = "0.6.3"
authors = ["Aster <192607617@qq.com>"]
description = "Pretty diagnostic report"
repository = "https://github.com/oovm/diagnostic-rs/tree/dev/projects/diagnostic"
documentation = "https://docs.rs/diagnostic"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"], optional = true }
unicode-width = "0.1.11"

[dependencies.source-cache]
version = "0.2.1"
#path = "../source-cache"


[dev-dependencies]

[features]
default = []
serde = ["dep:serde", "source-cache/serde"]

[package.metadata.docs.rs]
all-features = true
