[package]
name = "source-cache"
version = "0.2.3"
authors = ["Aster <192607617@qq.com>"]
description = "Query the cache of raw text"
repository = "https://github.com/oovm/diagnostic-rs/tree/dev/projects/source-cache"
documentation = "https://docs.rs/source-cache"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
url = "2.5.0"
#dashmap = "5.5.3"
serde = { version = "1.0.197", features = ["derive"], optional = true }


[dev-dependencies]

[features]
default = []
serde = ["dep:serde", "url/serde"]

[package.metadata.docs.rs]
all-features = true
