[package]
name = "syntax-error"
version = "0.0.5"
readme = "Readme.md"
license = "Apache-2.0"
authors = ["Aster <192607617@qq.com>", "Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Beautiful diagnostic reporting for text-based programming languages"
homepage = "https://github.com/oovm/diagnostic-rs"
repository = "https://github.com/oovm/diagnostic-rs"
documentation = "https://docs.rs/diagnostic"
exclude = ["tests/**"]
edition = "2021"

[dependencies.diagnostic]
version = "0.5.*"
path = "../diagnostic"

[dependencies]
dashu = { version = "0.3.1", optional = true }
serde = { version = "1.0.163", optional = true }
serde_json = { version = "1.0.96", optional = true }
toml = { version = "0.7.3", optional = true }
num = { version = "0.4.0", optional = true }
url = { version = "2.3.1", optional = true }
pex = { version = "0.1.6", optional = true }
regex = { version = "1.8.1", optional = true }

[dev-dependencies]
#unindent = "0.2.1"

[features]
default = []
serde = ["dep:serde", "num?/serde"]
