[package]
name = "syntax-error"
version = "0.0.5"
readme = "Readme.md"
license = "Apache-2.0"
authors = ["Aster <192607617@qq.com>", "Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Beautiful diagnostic reporting for text-based programming languages"
homepage = "https://github.com/oovm/diagnostic-rs"
repository = "https://github.com/oovm/diagnostic-rs"
documentation = "https://docs.rs/diagnostic"
exclude = ["tests/**"]
edition = "2021"

[dependencies.diagnostic]
version = "0.5.*"
path = "../diagnostic"

[dependencies]
dashu = { version = "0.4.0", optional = true }
serde = { version = "1.0.188", optional = true }
serde_json = { version = "1.0.107", optional = true }
toml = { version = "0.8.2", optional = true }
num = { version = "0.4.1", optional = true }
url = { version = "2.4.1", optional = true }
pex = { version = "0.2.4", optional = true }
regex = { version = "1.9.6", optional = true }

[dev-dependencies]
#unindent = "0.2.1"

[features]
default = []
serde = ["dep:serde", "num?/serde"]
