[package]
name = "validatus"
version = "0.5.0"
readme = "Readme.md"
license = "Apache-2.0"
authors = ["Aster <192607617@qq.com>", "Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Beautiful diagnostic reporting for text-based programming languages"
homepage = "https://github.com/oovm/diagnostic-rs"
repository = "https://github.com/oovm/diagnostic-rs"
documentation = "https://docs.rs/diagnostic"
exclude = ["tests/**"]
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
termcolor = "1.2.0"
unicode-width = "0.1.10"
log = "0.4.17"

[dev-dependencies]
unindent = "0.2.1"

[features]
default = []
nightly = []
ascii-only = []
