[package]
name = "validatus"
version = "0.0.0"
readme = "readme.md"
license = "Apache-2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Beautiful diagnostic reporting for text-based programming languages"
homepage = "https://github.com/oovm/diagnostic-rs"
repository = "https://github.com/oovm/diagnostic-rs"
documentation = "https://docs.rs/diagnostic"
exclude = ["tests/**"]
edition = "2021"

[dependencies]
serde = { version = "1.0.163", optional = true }

[dev-dependencies]
unindent = "0.2.1"

[features]
default = []
#nightly = []
