[package]
name = "validatus"
version = "0.0.6"
readme = "readme.md"
license = "Apache-2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Validator types, returns multiple tolerable errors at once"
homepage = "https://github.com/oovm/diagnostic-rs"
repository = "https://github.com/oovm/diagnostic-rs"
documentation = "https://docs.rs/validatus"
exclude = ["tests/**"]
edition = "2021"

[dependencies]
serde = { version = "1.0.188", optional = true }

[dev-dependencies]
unindent = "0.2.3"

[features]
default = []
#nightly = []
